# vidardb

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeInstall.sh  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  PATENTS  README.md  contributing.md  src.mk  thirdparty.inc
.github/workflows/: main.yml
build_tools/: build_detect_platform  version.sh
cmake/: VidarDBConfig.cmake.in
db/: auto_roll_logger.cc  auto_roll_logger.h  builder.cc  builder.h  column_family.cc  column_family.h  compaction.cc  compaction.h  compaction_iterator.cc  compaction_iterator.h  compaction_job.cc  compaction_job.h  compaction_picker.cc  compaction_picker.h  convenience.cc  db_filesnapshot.cc  db_impl.cc  db_impl.h  db_impl_debug.cc  db_impl_readonly.cc  db_impl_readonly.h  db_info_dumper.cc  db_iter.cc  db_iter.h  dbformat.cc  dbformat.h  event_helpers.cc  event_helpers.h  file_indexer.cc  file_indexer.h  file_iter.cc  filename.cc  filename.h  flush_job.cc  flush_job.h  flush_scheduler.cc  flush_scheduler.h  forward_iterator.cc  forward_iterator.h  forward_iterator_bench.cc  (+31 more)
docker-image/: Dockerfile  README.md  docker-entrypoint.sh  health-check.sh
docker_image/: Dockerfile  README.md  docker-entrypoint.sh  health-check.sh  install-madlib.sh
examples/: .gitignore  Makefile  adaptive_table_example.cc  column_families_example.cc  compact_files_example.cc  comparator_example.cc  range_query_column_example.cc  range_query_example.cc  simple_column_example.cc  simple_example.cc  transaction_example.cc
include/vidardb/: cache.h  compaction_job_stats.h  comparator.h  convenience.h  db.h  env.h  file_iter.h  flush_block_policy.h  global.h  immutable_options.h  iostats_context.h  iterator.h  listener.h  memtablerep.h  metadata.h  options.h  perf_context.h  perf_level.h  range_query_area.h  slice.h  splitter.h  sst_file_manager.h  sst_file_writer.h  statistics.h  status.h  table.h  table_properties.h  thread_status.h  transaction_log.h  types.h  universal_compaction.h  version.h  wal_filter.h  write_batch.h  write_batch_base.h
memtable/: inlineskiplist.h  memtable.cc  memtable.h  memtable_allocator.cc  memtable_allocator.h  memtable_list.cc  memtable_list.h  skiplist.h  skiplistrep.cc  vectorrep.cc
port/: dirent.h  lang.h  likely.h  port_example.h  port_posix.cc  port_posix.h  stack_trace.cc  sys_time.h
port/win/: env_default.cc  env_win.cc  env_win.h  io_win.cc  io_win.h  port_win.cc  port_win.h  win_logger.cc  win_logger.h  xpress_win.cc  xpress_win.h
table/: adaptive_table_factory.cc  adaptive_table_factory.h  block.cc  block.h  block_based_table_builder.cc  block_based_table_builder.h  block_based_table_factory.cc  block_based_table_factory.h  block_based_table_reader.cc  block_based_table_reader.h  block_builder.cc  block_builder.h  column_block_builder.cc  column_block_builder.h  column_table_builder.cc  column_table_builder.h  column_table_factory.cc  column_table_factory.h  column_table_reader.cc  column_table_reader.h  flush_block_policy.cc  format.cc  format.h  get_context.cc  get_context.h  index_builder.h  index_reader.h  internal_iterator.h  iter_heap.h  iterator.cc  iterator_wrapper.h  main_column_block_builder.cc  main_column_block_builder.h  main_column_table_iterator.h  merger.cc  merger.h  meta_blocks.cc  meta_blocks.h  min_max_block_builder.cc  min_max_block_builder.h  (+14 more)
test/db/: auto_roll_logger_test.cc  column_family_test.cc  compact_files_test.cc  compaction_iterator_test.cc  compaction_job_stats_test.cc  compaction_job_test.cc  compaction_picker_test.cc  comparator_db_test.cc  corruption_test.cc  db_block_cache_test.cc  db_compaction_test.cc  db_dynamic_level_test.cc  db_io_failure_test.cc  db_iter_test.cc  db_iterator_test.cc  db_log_iter_test.cc  db_properties_test.cc  db_sst_test.cc  db_table_properties_test.cc  db_tailing_iter_test.cc  db_test.cc  db_test2.cc  db_test_util.cc  db_test_util.h  db_universal_compaction_test.cc  db_wal_test.cc  dbformat_test.cc  deletefile_test.cc  fault_injection_test.cc  file_indexer_test.cc  filename_test.cc  flush_job_test.cc  inlineskiplist_test.cc  listener_test.cc  log_test.cc  manual_compaction_test.cc  options_file_test.cc  perf_context_test.cc  repair_test.cc  skiplist_test.cc  (+7 more)
test/e2e/: .gitignore  Makefile  README.md  adaptive_table_factory_test.cc  comparator_test.cc  range_query_column_test.cc  range_query_row_test.cc  range_query_tpch_test.cc  run-e2e-tests.sh  simple_column_test.cc  simple_row_test.cc
test/memtable/: memtable_list_test.cc
test/table/: block_test.cc  merger_test.cc  table_test.cc
test/tools/: db_bench_tool_test.cc  db_sanity_test.cc
test/util/: arena_test.cc  cache_test.cc  coding_test.cc  crc32c_test.cc  delete_scheduler_test.cc  env_test.cc  event_logger_test.cc  file_reader_writer_test.cc  filelock_test.cc  heap_test.cc  histogram_test.cc  iostats_context_test.cc  mock_env_test.cc  options_settable_test.cc  options_test.cc  thread_list_test.cc  thread_local_test.cc
tools/: cache_bench.cc  db_bench.cc  db_bench_tool.cc  db_repl_stress.cc  db_stress.cc  log_write_bench.cc  memtablerep_bench.cc  write_stress.cc
util/: aligned_buffer.h  allocator.h  arena.cc  arena.h  build_version.cc  build_version.cc.in  cache.cc  coding.cc  coding.h  comparator.cc  compression.h  concurrent_arena.cc  concurrent_arena.h  crc32c.cc  crc32c.h  delete_scheduler.cc  delete_scheduler.h  env.cc  env_posix.cc  event_logger.cc  event_logger.h  fault_injection_test_env.cc  fault_injection_test_env.h  file_reader_writer.cc  file_reader_writer.h  file_util.cc  file_util.h  hash.cc  heap.h  histogram.cc  histogram.h  instrumented_mutex.cc  instrumented_mutex.h  io_posix.cc  io_posix.h  iostats_context.cc  iostats_context_imp.h  kv_map.h  log_buffer.cc  log_buffer.h  (+55 more)
utilities/transactions/: transaction_base.cc  transaction_base.h  transaction_db_impl.cc  transaction_db_impl.h  transaction_db_mutex_impl.cc  transaction_db_mutex_impl.h  transaction_impl.cc  transaction_impl.h  transaction_lock_mgr.cc  transaction_lock_mgr.h  transaction_util.cc  transaction_util.h
(+8 files in other folders)
